force-app/main/default/objects/Einstein_Language_Event__e/Einstein_Language_Event__e.object-meta.xml
<CustomObject>
    <label>Einstein Language Event</label>
    <pluralLabel>Einstein Language Events</pluralLabel>
</CustomObject>