force-app/main/default/objects/Einstein_Language_Event__e/fields/CallbackId__c.field-meta.xml
<CustomField>
    <fullName>CallbackId__c</fullName>
    <description>Used in a wait element in a flow to match a request for an Einstein language analysis</description>
    <label>CallbackId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>