force-app/main/default/objects/Einstein_Language_Event__e/fields/MaxIntent__c.field-meta.xml
<CustomField>
    <fullName>MaxIntent__c</fullName>
    <label>MaxIntent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>