force-app/main/default/objects/Einstein_Language_Event__e/fields/MaxIntentScore__c.field-meta.xml
<CustomField>
    <fullName>MaxIntentScore__c</fullName>
    <label>MaxIntentScore</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>