force-app/main/default/objects/Einstein_Language_Event__e/fields/MaxSentiment__c.field-meta.xml
<CustomField>
    <fullName>MaxSentiment__c</fullName>
    <label>MaxSentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>