force-app/main/default/objects/Einstein_Language_Event__e/fields/MaxSentimentScore__c.field-meta.xml
<CustomField>
    <fullName>MaxSentimentScore__c</fullName>
    <label>MaxSentimentScore</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>